[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sec-edgar-api"
authors = [{name = "Jad Chaar", email = "jad.chaar@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pyrate-limiter>=3.1.0"
]
requires-python = ">=3.8"
description = "Unofficial SEC EDGAR API wrapper for Python"
keywords = ["sec", "edgar", "filing", "financial", "finance", "stocks", "mutual funds", "etfs", "cik", "ticker", "api wrapper"]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints"
]

[project.urls]
Documentation = "https://sec-cik-mapper.readthedocs.io"
Source = "https://github.com/jadchaar/cik-mapper"
Issues = "https://github.com/jadchaar/cik-mapper/issues"

[tool.flit.module]
name = "sec_edgar_api"
